--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 <body>
 
- <img src="lorrany.jpeg" alt="" height="300px" width="200px">
+ <img src="lo.jpeg" alt="" height="300px" width="200px">
   <h1> Lorrany Santos</h1>
 
      <p>Meu nome é Lorrany, tenho 17 anos, estudo no IFPI e estou no 2º ano de informática.</p>
