--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Atividade Programação Web</title>
+    <title>Formulário</title>
     <link rel="stylesheet" href="spotify.css">
  </head>
 
