--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
   <input type="checkbox" id="vehicle3" name="vehicle3" value="trap">
   <label for="vehicle3" class="cor"> TRAP</label><br>
   <hr>
-  <h3>Gostou?</h3>
+  <h3>Agora diga seus artistas favoritos:</h3>
   <textarea name="message" rows="10" cols="30">
     
     </textarea><br>
