--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
    <p><h3>Entre em contato:</h3>
    santoslorrany250@gmail.com ou 98804-5902 <a href=https://instagram.com/lorrany_santos_._?igshid=ZDdkNTZiNTM=>clique aqui</a>
-   <p>Visite meu player: <a href="lorrany17.github.io/form.html">Monte sua playlist</a> </p>
+   <p>Visite meu player: <a href="file:///C:/Users/Lorrany/OneDrive/Documentos/Lorrany17.github.io/form.html">Monte sua playlist</a> </p>
 
 </body>
 </html>
