--- a/form.html
+++ b/form.html
@@ -30,8 +30,8 @@
   <input type="checkbox" id="vehicle3" name="vehicle3" value="trap">
   <label for="vehicle3" class="cor"> TRAP</label><br>
   <hr>
-  <h3>Agora diga seus artistas favoritos:</h3>
-  <textarea name="message" rows="10" cols="30">
+  <h3>Quais são seus cantores favoritos?</h3>
+  <textarea name="message" rows="5" cols="10">
     
     </textarea><br>
 <hr>
