--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 <body>
 
- <img src="lo.jpeg" alt="" height="300px" width="200px">
+ <img src="lo.jpeg" alt="" height="200px" width="200px">
   <h1> Lorrany Santos</h1>
 
      <p>Meu nome é Lorrany, tenho 17 anos, estudo no IFPI e estou no 2º ano de informática.</p>
@@ -40,7 +40,7 @@
 
    <p><h3>Entre em contato:</h3>
    santoslorrany250@gmail.com ou 98804-5902 <a href=https://instagram.com/lorrany_santos_._?igshid=ZDdkNTZiNTM=>clique aqui</a>
-   <p>Visite meu player: <a href="Lorrany17.github.io/form.html">Formulário</a> </p>
+   <p>Visite meu player: <a href=https://lorrany17.github.io/form.html>Formulário</a> </p>
 
 </body>
 </html>
