--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
   <label for="vehicle3" class="cor"> TRAP</label><br>
   <hr>
   <h3>Quais são seus cantores favoritos?</h3>
-  <textarea name="message" rows="5" cols="10">
+  <textarea name="message" rows="5" cols="20">
     
     </textarea><br>
 <hr>
@@ -40,7 +40,7 @@
   <label for="fname"><strong>Contato:</strong></label><br>
   <input type="text" id="fname" name="fname"><br>
   <br>
-  <input type="submit" value="Clique se tiver coragem" id="nova">
+  <input type="submit" value="Ok" id="nova">
     </form>
 </body>
 </html>
