--- a/form.html
+++ b/form.html
@@ -14,9 +14,9 @@
 <hr>
 
 <label for="fname"><strong>Nome da sua playlist:</strong></label><br>
-  <input type="text" id="fname" name="fname"><br>
+  <input type="text" id="fname" name="nome da playlist"><br>
   <hr>
-  <p><strong>Escolha seus estilos preferidos:</strong></p>
+  <p><strong>ESCOLHA SEUS ESTILOS DE MÚSICA:</strong></p>
   <input type="checkbox" id="vehicle1" name="vehicle1" value="sertanejo">
   <label for="vehicle1" class="cor"> SERTANEJO</label><br>
   <input type="checkbox" id="vehicle2" name="vehicle2" value="Funk">
@@ -30,15 +30,15 @@
   <input type="checkbox" id="vehicle3" name="vehicle3" value="trap">
   <label for="vehicle3" class="cor"> TRAP</label><br>
   <hr>
-  <h3>Quais são seus cantores favoritos?</h3>
-  <textarea name="message" rows="5" cols="20">
+  <h3>QUAIS SÃO SEUS CANTORES FAVORITOS?</h3>
+  <textarea name="message" rows="10" cols="25">
     
     </textarea><br>
 <hr>
-    <label for="fname"><strong>Email:</strong></label><br>
-  <input type="text" id="fname" name="fname"><br>
-  <label for="fname"><strong>Contato:</strong></label><br>
-  <input type="text" id="fname" name="fname"><br>
+<label for="email">EMAIL:</label>
+<input type="email" id="email" name="email">
+  <label for="fname"><strong>CONTATO:</strong></label><br>
+  <input type="text" id="fname" name="contato"><br>
   <br>
   <input type="submit" value="Ok" id="nova">
     </form>
