--- a/form.html
+++ b/form.html
@@ -35,8 +35,8 @@
     
     </textarea><br>
 <hr>
-<label for="email">EMAIL:</label>
-<input type="email" id="email" name="email">
+<label for="email"><strong>EMAIL:</strong></label>
+<input type="email" id="email" name="email"><br>
   <label for="fname"><strong>CONTATO:</strong></label><br>
   <input type="text" id="fname" name="contato"><br>
   <br>
