--- a/form.html
+++ b/form.html
@@ -13,8 +13,8 @@
 <p class="verde">As melhores músicas aqui</p>
 <hr>
 
-<label for="fname"><strong>Nome da sua playlist:</strong></label><br>
-  <input type="text" id="fname" name="nome da playlist"><br>
+<label for="fname"><strong>NOME DA SUA PLAYLIST:</strong></label><br>
+  <input type="text" id="fname" name="nome da playlist" class="oi"><br>
   <hr>
   <p><strong>ESCOLHA SEUS ESTILOS DE MÚSICA:</strong></p>
   <input type="checkbox" id="vehicle1" name="vehicle1" value="sertanejo">
@@ -35,10 +35,10 @@
     
     </textarea><br>
 <hr>
-<label for="email"><strong>EMAIL:</strong></label>
-<input type="email" id="email" name="email"><br>
+<label for="email"><strong>EMAIL:</strong></label><br>
+<input type="email" id="email" name="email" class="oi"><br>
   <label for="fname"><strong>CONTATO:</strong></label><br>
-  <input type="text" id="fname" name="contato"><br>
+  <input type="text" id="fname" name="contato" class="oi"><br>
   <br>
   <input type="submit" value="Ok" id="nova">
     </form>
