--- a/form.html
+++ b/form.html
@@ -30,17 +30,19 @@
   <input type="checkbox" id="vehicle3" name="vehicle3" value="trap">
   <label for="vehicle3" class="cor"> TRAP</label><br>
   <hr>
+  
   <h3>QUAIS SÃO SEUS CANTORES FAVORITOS?</h3>
   <textarea name="message" rows="10" cols="25">
     
     </textarea><br>
+  
 <hr>
 <label for="email"><strong>EMAIL:</strong></label><br>
 <input type="email" id="email" name="email" class="oi"><br>
   <label for="fname"><strong>CONTATO:</strong></label><br>
   <input type="text" id="fname" name="contato" class="oi"><br>
   <br>
-  <input type="submit" value="Ok" id="nova">
+  <input type="submit" value="Enviar" id="nova">
     </form>
 </body>
 </html>
