--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <img src="lo.jpeg" alt="" height="300px" >
   <h1> Lorrany Santos</h1>
 
-     <p>Meu nome é Lorrany, tenho 17 anos, estudo no IFPI e estou no 2º ano de informática.</p>
+     <p>Meu nome é Lorrany, tenho 18 anos, estudo no IFPI e estou no 2º ano de informática.</p>
      <p>Gosto de assistir filmes e séries, ler, sair com os amigos e mexer nas redes sociais.</p>
      <p>Quando terminar o ensino médio estou pensando em fazer ADS, mas ainda não tenho certeza.</p>
 
@@ -19,9 +19,9 @@
 
  <ul>
  <h2>Experiência profissonal</h2>
-    <li>Já fui professora de reforço</li>
-    <li> Vendedora numa loja</li>
- 
+    <li> Professora de reforço</li>
+    <li> Vendedora</li>
+    <li>Babá</li>
 
  
  </ul>
@@ -39,8 +39,8 @@
 
 
    <p><h3>Entre em contato:</h3>
-   santoslorrany250@gmail.com ou 98804-5902 <a href=https://instagram.com/lorrany_santos_._?igshid=ZDdkNTZiNTM=>clique aqui</a>
-    <p>Visite meu formulário: <a href=https://lorrany17.github.io/form.html>Formulário</a> </p>
+  Email: santoslorrany250@gmail.com ou Ligue: 98804-5902 <a href=https://instagram.com/lorrany_santos_._?igshid=ZDdkNTZiNTM=>Não clique</a>
+    <p>Crie sua playlist: <a href=https://lorrany17.github.io/form.html>Formulário</a> </p>
 
 </body>
 </html>
