--- a/form.html
+++ b/form.html
@@ -13,8 +13,8 @@
 <p class="verde">As melhores músicas aqui</p>
 <hr>
 
-<label for="fname"><strong>NOME DA SUA PLAYLIST:</strong></label><br>
-  <input type="text" id="fname" name="nome da playlist" class="oi" ><br>
+<label for="nome da playlist"><strong>NOME DA SUA PLAYLIST:</strong></label><br>
+  <input type="text" id="nome da playlist" name="nome da playlist" class="oi" autofocus><br>
   <hr>
   <p><strong>ESCOLHA SEUS ESTILOS DE MÚSICA:</strong></p>
   <input type="checkbox" id="vehicle1" name="vehicle1" value="sertanejo">
