--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@
   <option value="FORRÓ" class="cor">FORRÓ</option>
   <option value="K-POP" class="cor">K-POP</option>
   <option value="REGGAETON" class="cor">REGGAETON</option>
-  <option value="BREGA" class="cor">BREGA</option>
+  <option value="GOSPEL" class="cor">GOSPEL</option>
 </select>
 </select>
   </form>
